fix(theme): alignment each different level search results

--- a/packages/theme-default/src/components/SearchBar.less
+++ b/packages/theme-default/src/components/SearchBar.less
@@ -62,6 +62,7 @@
         padding: 6px 20px;
         color: @c-secondary;
         text-decoration: none;
+        line-height: 1.5715;
         transition: background-color 0.3s;
         white-space: nowrap;
         overflow: hidden;
